#15 fix roll out with australis style - bleeding background

--- a/chrome/skin/common/slimChrome.css
+++ b/chrome/skin/common/slimChrome.css
@@ -87,6 +87,9 @@
 	window:not([chromehidden~="toolbar"]) #navigator-toolbox[slimStyle="australis"] #theFoxOnlyBetter-slimChrome-container:-moz-any([hover],:not([onlyURLBar])) {
 		clip-path: url("chrome://browser/content/browser.xul#theFoxOnlyBetter-slimChrome-clipPath-container");
 	}
+	window:not([chromehidden~="toolbar"]) #navigator-toolbox[slimStyle="australis"] #theFoxOnlyBetter-slimChrome-container:-moz-any([hover],:not([onlyURLBar])) #theFoxOnlyBetter-slimChrome-toolbars {
+		clip-path: url("chrome://browser/content/browser.xul#theFoxOnlyBetter-slimChrome-clipPath-toolbars");
+	}
 	
 	#theFoxOnlyBetter-slimChrome-toolbars-before,
 	#theFoxOnlyBetter-slimChrome-toolbars-after {
@@ -103,6 +106,14 @@
 	#theFoxOnlyBetter-slimChrome-toolbars-before:-moz-locale-dir(rtl),
 	#theFoxOnlyBetter-slimChrome-toolbars-after:-moz-locale-dir(ltr) {
 		right: -1px;
+	}
+	
+	#theFoxOnlyBetter-slimChrome-toolbars-bottom {
+		position: absolute;
+		height: 0;
+		bottom: 0;
+		z-index: 2;
+		border-bottom: none;
 	}
 	
 	/* common elements to all styles */
