--- a/chrome/skin/linux/slimChrome.css
+++ b/chrome/skin/linux/slimChrome.css
@@ -142,6 +142,16 @@
 		padding: 0 3px;
 	}
 	
+	/* australis style */
+	
+	#navigator-toolbox[slimStyle="australis"] #theFoxOnlyBetter-slimChrome-container:-moz-any([hover],:not([onlyURLBar])) {
+		border-color: transparent;
+	}
+	
+	#navigator-toolbox[slimStyle="australis"] #theFoxOnlyBetter-slimChrome-container:-moz-any([hover],:not([onlyURLBar])) #theFoxOnlyBetter-slimChrome-toolbars {
+		border-bottom: 1px solid ThreeDShadow;
+	}
+	
 	/* animations */
 	
 	#theFoxOnlyBetter-slimChrome-container:-moz-any([animation="rollout"],[animation="slidedown"]):not([hover]):not([mini]) {
