--- a/chrome/skin/mac/svg.css
+++ b/chrome/skin/mac/svg.css
@@ -3,5 +3,14 @@
 #theFoxOnlyBetter-slimChrome-svg-before-path,
 #theFoxOnlyBetter-slimChrome-svg-after-path {
 	stroke: #ababab;
+}
+
+#theFoxOnlyBetter-slimChrome-container[numToolbars="1"] #theFoxOnlyBetter-slimChrome-svg-before-path,
+#theFoxOnlyBetter-slimChrome-container[numToolbars="1"] #theFoxOnlyBetter-slimChrome-svg-after-path {
 	stroke-width: 0.03;
+}
+
+#theFoxOnlyBetter-slimChrome-container:not([numToolbars="1"]) #theFoxOnlyBetter-slimChrome-svg-before-path,
+#theFoxOnlyBetter-slimChrome-container:not([numToolbars="1"]) #theFoxOnlyBetter-slimChrome-svg-after-path {
+	stroke-width: 0.02;
 }
